--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://parasu02.github.io/Zustand-project",
+  "homepage": "https://Parasu02.github.io/new-one",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "watch": "sass --watch src/scss/style.scss src/scss/css/style.css",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "vite gh-pages"
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
@@ -36,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "gh-pages": "^6.2.0",
     "globals": "^15.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-gh-pages": "^1.0.0"
   }
 }
